# Parrot-Clipboard

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: GitHub开源发布资料.md  UI规范文档.md  技术架构选型文档.md  核心功能可行性评审.md  模块拆分文档.md  模块界限文档.md  现状.md  软件项目愿景需求表.md  迭代版本规划文档.md  页面地图与页面功能简介.md  项目决策记录文档.md  项目目录与文件规划文档.md
e2e/: playwright.config.ts  start-vite-server.mjs
scripts/: package-macos-dmg.sh  sign-windows.ps1  verify-release.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  logging.rs  state.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/autostart/: linux.rs  mod.rs  windows.rs
src-tauri/src/clipboard/: events.rs  filter.rs  history.rs  mod.rs  monitor.rs  payload.rs  preview_preparer.rs  query.rs  record.rs  repository.rs  runtime_repository.rs  store.rs  test_fixtures.rs  types.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/image/: cleanup.rs  mod.rs  storage.rs
src-tauri/src/ipc/: commands.rs  events.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/paste/: mod.rs  text_strip.rs
src-tauri/src/persistence/: migrations.rs  mod.rs  row_mapper.rs  sqlite.rs
src-tauri/src/platform/: capabilities.rs  linux.rs  macos.rs  mod.rs  tests.rs  windows.rs
src-tauri/src/settings/: blacklist.rs  mod.rs  model.rs  tests.rs  validator.rs
src-tauri/src/shortcut/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/window/: about_window.rs  mod.rs  panel_auto_hide.rs  permission_guide_window.rs  position.rs  preview_window.rs  settings_window.rs
(+250 files in other folders)
